ui-api-service/ui-api-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-api-service
spec:
 selector:
    app: ui-api
 type: LoadBalancer
 ports:
  - targetPort: 8080
    port: 8080
    nodePort: 30127
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-api-v0.2
spec:
  selector:
    matchLabels:
      app: ui-api
  replicas: 1
  template:
    metadata:
      labels:
        app: ui-api
        version: v2
    spec:
      containers:
      - name: ui-api
        imagePullPolicy: Always
        image: sgarandomerror/ui-api:v0.2
        ports:
        - containerPort: 8080
